--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,8 @@
     ".huskyrc": "json",
     ".lintstagedrc": "json",
 
-    ".snyk": "yaml"
+    ".snyk": "yaml",
+
+    ".imgbotconfig": "json"
   }
 }
